fix sidebar alignment

--- a/style.css
+++ b/style.css
@@ -85,8 +85,7 @@ a,li {
 /*top*/
 .logo-hidden{
     height: 30px;
-    margin-top: 5px;
-    padding-left: 0.5rem;
+    margin: 5px 0.5rem ;
     position: fixed; 
     top: 0;
     left: 0;
@@ -113,6 +112,8 @@ a,li {
 .aside-nav>ul {
     padding-top: 70px;
     padding-left: 0.75rem;  /*allineamento con il logo sopra*/
+    display: flex;
+    flex-direction: column;
     align-items: flex-start; 
 }  
 li{
@@ -201,6 +202,8 @@ i.fa-solid.fa-grip-lines-vertical {
         align-items: flex-start; 
         justify-content: center;
         margin: auto;
+        display: flex;
+        flex-direction: column;
     }  
 } 
 /*end of sm breakpoint*/
